sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:18: error: type mismatch;
 found   : Boolean
 required: Int
         if (getCouleur(avantBlanc) == BLANC && getCouleur(apresBleu != BLEU)) {
                                                                     ^